# word-to-markdown

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icon.mjs  smoke-convert.mjs
src/: main.ts  style.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: convert.ts  io.ts  markdown.ts
